# Logger

./: .gitignore  README.md  pyproject.toml
Setup/: Build Packages.bat  Create Config.bat  Create Config.py  Create Virtual Environment.bat
Tests/: Test.py
src/: Logger.py
src/Logger/: Logger.py
