[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Logger"
version = "1.0.2"
authors = [
  { name="Surendar Kumar", email="srk14878@gmail.com" },
]
description = "This project wraps the default python logging library to make it easier to work with and standarizes output options for internal projects."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/suri14878/Logger"
Issues = "https://github.com/suri14878/Logger/issues"